# Drone-Vision-based-Precision-Landing

./: .gitignore  README.md
drone_vision_landing/: CMakeLists.txt  package.xml
drone_vision_landing/launch/: precision_landing.launch
drone_vision_landing/models/drone_with_camera/: model.config  model.sdf
drone_vision_landing/models/landing_pad/: model.config  model.sdf
drone_vision_landing/scripts/: landing_detector.py  landing_pad_teleop.py  px4_sitl_launcher.sh
drone_vision_landing/worlds/: landing_pad.world  landing_pad.world.save
